backgrounds of divs

--- a/index.html
+++ b/index.html
@@ -43,14 +43,42 @@
             <img src="./assets/profile-picture.jpeg" alt="profile-picture">
         </section>
         <section class="personal-info-top-right">
-            <p> Hi, I’m Lorenzo Latinne, a student currently diving into the world of programming. I’m passionate about
-                learning new languages, frameworks, and problem-solving techniques to build efficient, user-friendly
-                software. With each project, I strive to improve my skills and bring fresh ideas to life, while staying
-                curious and motivated to keep growing as a developer.</p>
+            <p> I’m <span class="emphasize bold">Lorenzo Latinne</span>, an aspiring software and web developer currently pursuing an Associate Degree
+                in Programming. My journey into the world of IT began with a deep admiration for how technology
+                shapes
+                our lives and a desire to combine my passions with a fulfilling career. I’m on track to master C#,
+                JavaScript, HTML, and CSS, and I’m proud to be nearing the completion of Harvard’s CS50:
+                Introduction to
+                Computer Science—my first major certification. This portfolio is a key part of my final project and
+                an
+                important step in my learning journey.<br><br>
+
+                Through my studies, I’ve tackled challenging problem sets and developed creative projects like a
+                personal portfolio website and a Mastermind game built in C#. These experiences have strengthened my
+                skills and fueled my excitement for a future in programming, where the mix of logic and creativity
+                is
+                what intrigues me most.<br><br>
+
+                Prior to my studies, I worked for four years as a Manager’s Assistant, handling marketing, finances,
+                and
+                customer relations. This experience taught me the importance of communication and
+                organization—skills I
+                know will serve me well in the IT field.<br><br>
+
+                Outside of work, my greatest joy comes from spending time with my wife and close friends. I recently
+                achieved one of my proudest milestones: buying a home with my wife as we prepare to welcome our
+                first
+                child at the end of 2024. In my free time, I love playing guitar, singing, and listening to music,
+                finding inspiration in the balance between discipline and creativity.<br><br>
+
+                What motivates me most is the never-ending journey of learning. I love the challenge of tackling new
+                ideas and solving problems in a field that truly interests me. IT offers the possibility of not only
+                personal growth but also achieving a meaningful work-life balance—something I value deeply as I look
+                forward to this exciting chapter in my life.<br><br></p>
         </section>
     </div>
     <div class="personal-info-middle">
-        <div class="skills">
+        <div class="skills white-rounded-background">
             <div class="section-title">
                 <h2>SKILLS</h2>
             </div>
@@ -169,7 +197,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="education">
+        <div class="education white-rounded-background">
             <div class="section-title">
                 <h2>EDUCATION</h2>
             </div>
@@ -189,7 +217,8 @@
                 </div>
                 <div class="timeline-item third">
                     <p class="above-timeline">
-                        Bachelor in Business management Marketing - PXL Hasselt - Second year of bachelor's degree finished -
+                        Bachelor in Business management Marketing - PXL Hasselt - Second year of bachelor's degree
+                        finished -
                     </p>
                     <p>2017-2019</p>
                 </div>
@@ -201,19 +230,20 @@
                 </div>
             </div>
         </div>
-        <div class="experience">
+        <div class="experience white-rounded-background">
             <div class="section-title">
                 <h2>EXPERIENCE</h2>
             </div>
             <div class="experience-list">
                 <ul>
                     <li>
-                        <h3>Het XPand - Manager's Assistant - 2020 - 2023</h3>
+                        <h3><span class="emphasize">2020 - 2023</span> Het XPand - Manager's Assistant</h3>
                         <ul>
                             <li>
                                 <p class="job-skill">Administrative Support</p>
                                 <div class="job-description ">
-                                    <p>Manage the manager’s calendar, including scheduling meetings with clients, vendors,
+                                    <p>Manage the manager’s calendar, including scheduling meetings with clients,
+                                        vendors,
                                         and
                                         staff.</p>
                                     <p>Handle correspondence such as emails, calls, and messages from prospective and
@@ -226,7 +256,8 @@
                             <li>
                                 <p class="job-skill">Client Interaction</p>
                                 <div class="job-description ">
-                                    <p>Serve as the first point of contact for clients, assisting with inquiries and initial
+                                    <p>Serve as the first point of contact for clients, assisting with inquiries and
+                                        initial
                                         event
                                         planning details.</p>
                                     <p>Coordinate site visits, walk-throughs, and consultations with clients to finalize
@@ -265,17 +296,20 @@
                                 <div class="job-description ">
                                     <p>Prepare invoices, track payments, and ensure accurate billing for clients and
                                         vendors.</p>
-                                    <p>Maintain budgets for individual events and report discrepancies or overspending to
+                                    <p>Maintain budgets for individual events and report discrepancies or overspending
+                                        to
                                         the
                                         manager.</p>
-                                    <p>Support the manager in generating financial summaries and performance reports for the
+                                    <p>Support the manager in generating financial summaries and performance reports for
+                                        the
                                         venue.</p>
                                 </div>
                             </li>
                             <li>
                                 <p class="job-skill">Marketing and Sales Support</p>
                                 <div class="job-description ">
-                                    <p>Assist in drafting promotional materials, social media posts, and email campaigns to
+                                    <p>Assist in drafting promotional materials, social media posts, and email campaigns
+                                        to
                                         attract
                                         corporate clients.</p>
                                     <p>Maintain relationships with repeat clients and gather feedback to improve
@@ -291,16 +325,18 @@
                                         concerns,
                                         or
                                         logistical challenges.</p>
-                                    <p>Maintain composure and professionalism to resolve issues promptly and ensure client
+                                    <p>Maintain composure and professionalism to resolve issues promptly and ensure
+                                        client
                                         satisfaction.</p>
                                 </div>
                             </li>
                         </ul>
                     </li>
                 </ul>
+                <br>
                 <ul>
                     <li>
-                        <h3>LABO LEB - Manager's Assistant - 2023 - 2024</h3>
+                        <h3><span class="emphasize">2023 - 2024</span> LABO LEB - Manager's Assistant</h3>
                         <ul>
                             <li>
                                 <p class="job-skill">Administrative Support</p>
@@ -346,13 +382,43 @@
                             <li>
                                 <p class="job-skill">Problem Solving</p>
                                 <div class="job-description ">
-                                    <p>Maintain composure and professionalism to resolve issues promptly and ensure client
+                                    <p>Maintain composure and professionalism to resolve issues promptly and ensure
+                                        client
                                         satisfaction.</p>
                                 </div>
                             </li>
                         </ul>
                     </li>
                 </ul>
+            </div>
+        </div>
+        <div class="contact-form white-rounded-background">
+            <div class="section-title">
+                <h2>CONTACT</h2>
+            </div>
+            <div class="form-div">
+                <form action="mailto:lorenzo_latinne@hotmail.com?subject=sent contactform cv"
+                      enctype="text/plain"
+                      method="POST">
+                    <div class="form-item">
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="name" placeholder="Your full name" required>
+                    </div>
+                    <div class="form-item">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" placeholder="Your email address" required>
+                    </div>
+                    <div class="form-item">
+                        <label for="subject">Subject</label>
+                        <input type="text" id="subject" name="subject" placeholder="Subject of your message" required>
+                    </div>
+                    <div class="form-item">
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message" placeholder="Write your message here..." required></textarea>
+                    </div>
+                    <button type="submit">Send Message</button>
+                    <div class="form-message">*All fields are required.</div>
+                </form>
             </div>
         </div>
     </div>
