Changing color scheme.

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 <header id="top-of-page">
     <nav class="nav-bar">
         <div class="nav-left">
-            <a href="">
-                <p>LORENZO</p>
-            </a>
+            <a href="">LORENZO</a>
         </div>
         <div class="nav-middle">
-            <a href="">
-                <p>ABOUT ME</p>
-            </a>
-            <a href="">
-                <p>PORTFOLIO</p>
-            </a>
-            <a href="">
-                <p>PROJECTS</p>
-            </a>
+            <ul>
+                <li>
+                    <a href="">ABOUT ME</a>
+                </li>
+                <li>
+                    <a href="">PORTFOLIO</a>
+                </li>
+                <li>
+                    <a href="">PROJECTS</a>
+                </li>
+            </ul>
         </div>
         <div class="nav-right">
             <a href="" class="contact-button">
