--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Lorenzo Latinne</title>
 </head>
 <body>
-<header id="top-of-page">
+<header>
     <nav class="nav-bar">
         <div class="nav-left">
             <a href="">LORENZO</a>
@@ -21,10 +21,16 @@
                     <a href="">ABOUT ME</a>
                 </li>
                 <li>
-                    <a href="">PORTFOLIO</a>
+                    <a href="">SKILLS</a>
                 </li>
                 <li>
-                    <a href="">PROJECTS</a>
+                    <a href="">EDUCATION</a>
+                </li>
+                <li>
+                    <a href="">EXPERIENCE</a>
+                </li>
+                <li>
+                    <a href="">PORTFOLIO</a>
                 </li>
             </ul>
         </div>
@@ -37,17 +43,22 @@
     </nav>
 </header>
 
-<main>
+<main id="top-of-page">
     <div class="personal-info-top">
         <section class="personal-info-left">
-            <img src="./assets/profile-picture.jpeg" alt="profile-picture">
+            <a class="profile-link" target="_blank" href="https://be.linkedin.com/in/lorenzo-latinne-914b28192"><img class="profile-picture" src="./assets/profile-picture.jpeg" alt="profile-picture"></a>
+            <img class="doodle-star" src="assets/doodle-star.png" alt="">
+            <div class="social-media">
+                <a href="https://github.com/LorenzoLatinnePXL" target="_blank"><img src="assets/github-logo-24.png" alt="GitHub logo"></a>
+                <a href="https://be.linkedin.com/in/lorenzo-latinne-914b28192" target="_blank"><img src="assets/linkedin-logo-24.png" alt="LinkedIn logo"></a>
+                <a href="mailto:lorenzo_latinne@hotmail.com" target="_blank"><img src="assets/envelope-regular-24.png" alt="Mail logo"></a>
+            </div>
         </section>
         <section class="personal-info-top-right">
-            <p> I’m <span class="emphasize bold">Lorenzo Latinne</span>, an aspiring software and web developer currently pursuing an Associate Degree
+            <p> I’m <span class="emphasize1 bold">Lorenzo Latinne</span>, an aspiring software and web developer currently pursuing an Associate Degree
                 in Programming. My journey into the world of IT began with a deep admiration for how technology
                 shapes
-                our lives and a desire to combine my passions with a fulfilling career. I’m on track to master C#,
-                JavaScript, HTML, and CSS, and I’m proud to be nearing the completion of Harvard’s CS50:
+                our lives and a desire to combine my passions with a fulfilling career. <span class="emphasize2 bold">I’m on track to master C#, JavaScript, HTML, and CSS</span>, and I’m proud to be nearing the completion of Harvard’s CS50:
                 Introduction to
                 Computer Science—my first major certification. This portfolio is a key part of my final project and
                 an
@@ -55,23 +66,21 @@
 
                 Through my studies, I’ve tackled challenging problem sets and developed creative projects like a
                 personal portfolio website and a Mastermind game built in C#. These experiences have strengthened my
-                skills and fueled my excitement for a future in programming, where the mix of logic and creativity
-                is
-                what intrigues me most.<br><br>
+                skills and fueled my excitement for a future in programming, where the <span class="emphasize5 bold">mix of logic and creativity is what intrigues me most</span>.<br><br>
 
                 Prior to my studies, I worked for four years as a Manager’s Assistant, handling marketing, finances,
                 and
-                customer relations. This experience taught me the importance of communication and
-                organization—skills I
+                customer relations. This experience taught me the <span class="emphasize4 bold">importance of communication and
+                organization</span>—skills I
                 know will serve me well in the IT field.<br><br>
 
                 Outside of work, my greatest joy comes from spending time with my wife and close friends. I recently
                 achieved one of my proudest milestones: buying a home with my wife as we prepare to welcome our
                 first
                 child at the end of 2024. In my free time, I love playing guitar, singing, and listening to music,
-                finding inspiration in the balance between discipline and creativity.<br><br>
+                <span class="emphasize3 bold">finding inspiration in the balance between discipline and creativity</span>.<br><br>
 
-                What motivates me most is the never-ending journey of learning. I love the challenge of tackling new
+                What motivates me most is the <span class="emphasize1 bold">never-ending journey of learning</span>. I love the challenge of tackling new
                 ideas and solving problems in a field that truly interests me. IT offers the possibility of not only
                 personal growth but also achieving a meaningful work-life balance—something I value deeply as I look
                 forward to this exciting chapter in my life.<br><br></p>
@@ -81,6 +90,7 @@
         <div class="skills white-rounded-background">
             <div class="section-title">
                 <h2>SKILLS</h2>
+                <img class="doodle-loops" src="assets/doodle-loops.png" alt="">
             </div>
             <table class="skills-table">
                 <thead>
@@ -207,26 +217,26 @@
                         High School diploma - Economy - V.T.I Voorzienigheid<br>
                         Business Management Certificate
                     </p>
-                    <p>2015</p>
+                    <p class="white-text">2015</p>
                 </div>
                 <div class="timeline-item second">
                     <p class="below-timeline">
                         Master in Law - University Hasselt - Second year of bachelor's degree finished
                     </p>
-                    <p>2015-2017</p>
+                    <p class="white-text">2015 - 2017</p>
                 </div>
                 <div class="timeline-item third">
                     <p class="above-timeline">
                         Bachelor in Business management Marketing - PXL Hasselt - Second year of bachelor's degree
                         finished -
                     </p>
-                    <p>2017-2019</p>
+                    <p class="white-text">2017 - 2019</p>
                 </div>
                 <div class="timeline-item fourth">
                     <p class="below-timeline">
                         Associate's degree in Programming - PXL Hasselt
                     </p>
-                    <p>2024-2026</p>
+                    <p class="white-text">2024 - 2026</p>
                 </div>
             </div>
         </div>
@@ -237,7 +247,7 @@
             <div class="experience-list">
                 <ul>
                     <li>
-                        <h3><span class="emphasize">2020 - 2023</span> Het XPand - Manager's Assistant</h3>
+                        <h3><span class="emphasize4">2020 - 2023</span> Het XPand - Manager's Assistant</h3>
                         <ul>
                             <li>
                                 <p class="job-skill">Administrative Support</p>
@@ -333,10 +343,11 @@
                         </ul>
                     </li>
                 </ul>
+                <img class="doodle-triangles" src="assets/doodle-triangles.png" alt="">
                 <br>
                 <ul>
                     <li>
-                        <h3><span class="emphasize">2023 - 2024</span> LABO LEB - Manager's Assistant</h3>
+                        <h3><span class="emphasize4">2023 - 2024</span> LABO LEB - Manager's Assistant</h3>
                         <ul>
                             <li>
                                 <p class="job-skill">Administrative Support</p>
@@ -426,9 +437,18 @@
 
 <footer>
     <div class="footer-content">
-        <p>Lorenzo Latinne - 1PROa</p>
-        <p>Opdracht curriculum vitae</p>
-        <a href="#top-of-page"><p>Back to top</p></a>
+        <div class="footer-left">
+            <p>Lorenzo Latinne - 1PROa</p>
+        </div>
+        <div class="footer-middle">
+            <p>Opdracht curriculum vitae</p>
+        </div>
+        <div class="footer-right">
+            <a href="#top-of-page">
+                <p>Back to top</p>
+                <img src="assets/arrow-up.png" alt="">
+            </a>
+        </div>
     </div>
 </footer>
 
