--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header>
     <nav class="nav-bar">
         <div class="nav-left">
-            <a href="">LORENZO</a>
+            <a href="">Lorenzo</a>
         </div>
         <div class="nav-middle">
             <ul>
@@ -46,12 +46,12 @@
 <main id="top-of-page">
     <div class="personal-info-top">
         <section class="personal-info-left">
-            <a class="profile-link" target="_blank" href="https://be.linkedin.com/in/lorenzo-latinne-914b28192"><img class="profile-picture" src="./assets/profile-picture.jpeg" alt="profile-picture"></a>
-            <img class="doodle-star" src="assets/doodle-star.png" alt="">
+            <a class="profile-link" target="_blank" href="https://be.linkedin.com/in/lorenzo-latinne-914b28192"><img class="profile-picture" src="assets/images/profile-picture.jpeg" alt="profile-picture"></a>
+            <img class="doodle-star" src="assets/images/doodle-star.png" alt="">
             <div class="social-media">
-                <a href="https://github.com/LorenzoLatinnePXL" target="_blank"><img src="assets/github-logo-24.png" alt="GitHub logo"></a>
-                <a href="https://be.linkedin.com/in/lorenzo-latinne-914b28192" target="_blank"><img src="assets/linkedin-logo-24.png" alt="LinkedIn logo"></a>
-                <a href="mailto:lorenzo_latinne@hotmail.com" target="_blank"><img src="assets/envelope-regular-24.png" alt="Mail logo"></a>
+                <a href="https://github.com/LorenzoLatinnePXL" target="_blank"><img src="assets/images/github-logo-24.png" alt="GitHub logo"></a>
+                <a href="https://be.linkedin.com/in/lorenzo-latinne-914b28192" target="_blank"><img src="assets/images/linkedin-logo-24.png" alt="LinkedIn logo"></a>
+                <a href="mailto:lorenzo_latinne@hotmail.com" target="_blank"><img src="assets/images/envelope-regular-24.png" alt="Mail logo"></a>
             </div>
         </section>
         <section class="personal-info-top-right">
@@ -90,7 +90,7 @@
         <div class="skills white-rounded-background">
             <div class="section-title">
                 <h2>SKILLS</h2>
-                <img class="doodle-loops" src="assets/doodle-loops.png" alt="">
+                <img class="doodle-loops" src="assets/images/doodle-loops.png" alt="">
             </div>
             <table class="skills-table">
                 <thead>
@@ -343,7 +343,7 @@
                         </ul>
                     </li>
                 </ul>
-                <img class="doodle-triangles" src="assets/doodle-triangles.png" alt="">
+                <img class="doodle-triangles" src="assets/images/doodle-triangles.png" alt="">
                 <br>
                 <ul>
                     <li>
@@ -438,7 +438,7 @@
 <footer>
     <div class="footer-content">
         <div class="footer-left">
-            <p>Lorenzo Latinne - 1PROa</p>
+            <p><span class="caligraphy">Lorenzo Latinne</span> - 1PROa</p>
         </div>
         <div class="footer-middle">
             <p>Opdracht curriculum vitae</p>
@@ -446,7 +446,7 @@
         <div class="footer-right">
             <a href="#top-of-page">
                 <p>Back to top</p>
-                <img src="assets/arrow-up.png" alt="">
+                <img src="assets/images/arrow-up.png" alt="">
             </a>
         </div>
     </div>
