--- a/index.html
+++ b/index.html
@@ -83,14 +83,16 @@
                 What motivates me most is the <span class="emphasize1 bold">never-ending journey of learning</span>. I love the challenge of tackling new
                 ideas and solving problems in a field that truly interests me. IT offers the possibility of not only
                 personal growth but also achieving a meaningful work-life balance—something I value deeply as I look
-                forward to this exciting chapter in my life.<br><br></p>
+                forward to this exciting chapter in my life.<br><br>
+            </p>
+            <img src="assets/images/doodle-scribble.png" alt="doodle scribble">
         </section>
     </div>
     <div class="personal-info-middle">
         <div class="skills white-rounded-background">
             <div class="section-title">
                 <h2>SKILLS</h2>
-                <img class="doodle-loops" src="assets/images/doodle-loops.png" alt="">
+                <img class="doodle-loops" src="assets/images/doodle-loops.png" alt="doodle loops">
             </div>
             <table class="skills-table">
                 <thead>
