WEB-11 - Mobiel ontwerp

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 personal growth but also achieving a meaningful work-life balance—something I value deeply as I look
                 forward to this exciting chapter in my life.<br><br>
             </p>
-            <img src="assets/images/doodle-scribble.png" alt="doodle scribble">
+            <img class="doodle-scribble" src="assets/images/doodle-scribble.png" alt="doodle scribble">
         </section>
     </div>
     <div class="personal-info-middle">
