WEB-12 - Mobiel ontwerp

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 <header>
     <nav class="nav-bar">
         <div class="nav-left">
-            <a href="">Lorenzo</a>
+            <a href="#top-of-page">Lorenzo</a>
         </div>
         <div class="nav-middle">
             <ul>
                 <li>
-                    <a href="">ABOUT ME</a>
+                    <a href="#about-me-section">ABOUT ME</a>
                 </li>
                 <li>
-                    <a href="">SKILLS</a>
+                    <a href="#skills-section">SKILLS</a>
                 </li>
                 <li>
-                    <a href="">EDUCATION</a>
+                    <a href="#education-section">EDUCATION</a>
                 </li>
                 <li>
-                    <a href="">EXPERIENCE</a>
+                    <a href="#experience-section">EXPERIENCE</a>
                 </li>
                 <li>
                     <a href="">PORTFOLIO</a>
@@ -35,7 +35,7 @@
             </ul>
         </div>
         <div class="nav-right">
-            <a href="" class="contact-button">
+            <a href="#contact-section" class="contact-button">
                 <p>CONTACT</p>
             </a>
         </div>
@@ -44,7 +44,7 @@
 </header>
 
 <main id="top-of-page">
-    <div class="personal-info-top">
+    <div id="about-me-section" class="personal-info-top">
         <section class="personal-info-left">
             <a class="profile-link" target="_blank" href="https://be.linkedin.com/in/lorenzo-latinne-914b28192"><img class="profile-picture" src="assets/images/profile-picture.jpeg" alt="profile-picture"></a>
             <img class="doodle-star" src="assets/images/doodle-star.png" alt="">
@@ -89,7 +89,7 @@
         </section>
     </div>
     <div class="personal-info-middle">
-        <div class="skills white-rounded-background">
+        <div id="skills-section" class="skills white-rounded-background">
             <div class="section-title">
                 <h2>SKILLS</h2>
                 <img class="doodle-loops" src="assets/images/doodle-loops.png" alt="doodle loops">
@@ -209,7 +209,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="education white-rounded-background">
+        <div id="education-section" class="education white-rounded-background">
             <div class="section-title">
                 <h2>EDUCATION</h2>
             </div>
@@ -242,7 +242,7 @@
                 </div>
             </div>
         </div>
-        <div class="experience white-rounded-background">
+        <div id="experience-section" class="experience white-rounded-background">
             <div class="section-title">
                 <h2>EXPERIENCE</h2>
             </div>
@@ -405,7 +405,7 @@
                 </ul>
             </div>
         </div>
-        <div class="contact-form white-rounded-background">
+        <div id="contact-section" class="contact-form white-rounded-background">
             <div class="section-title">
                 <h2>CONTACT</h2>
             </div>
