WEB-13 & WEB 14 - Mobiel ontwerp & Responsiveness

--- a/index.html
+++ b/index.html
@@ -241,6 +241,42 @@
                     <p class="white-text">2024 - 2026</p>
                 </div>
             </div>
+            <div class="education-timeline-mobile">
+                <div class="mobile-years">
+                    <div class="mobile-year1">
+                        2015
+                    </div>
+                    <div class="mobile-description">
+                        High School diploma - Economy - V.T.I Voorzienigheid<br>
+                        Business Management Certificate
+                    </div>
+                    <div class="mobile-year2">
+                        2015 - 2017
+                    </div>
+                    <div class="mobile-description">
+                        Master in Law - University Hasselt - Second year of bachelor's degree finished
+                    </div>
+                    <div class="mobile-year3">
+                        2017 - 2019
+                    </div>
+                    <div class="mobile-description">
+                        Bachelor in Business management Marketing - PXL Hasselt - Second year of bachelor's degree
+                        finished
+                    </div>
+                    <div class="mobile-year4">
+                        2024 - 2026
+                    </div>
+                    <div class="mobile-description">
+                        Associate's degree in Programming - PXL Hasselt
+                    </div>
+                </div>
+                <div class="mobile-description">
+
+
+
+
+                </div>
+            </div>
         </div>
         <div id="experience-section" class="experience white-rounded-background">
             <div class="section-title">
