WEB-08 & WEB-09 - Opmaak, interactieve elementen, look & feel & Taal

--- a/index.html
+++ b/index.html
@@ -208,6 +208,11 @@
                 </tr>
                 </tbody>
             </table>
+            <div class="mobile-skills">
+                <div class="mobile-hard-skills">
+
+                </div>
+            </div>
         </div>
         <div id="education-section" class="education white-rounded-background">
             <div class="section-title">
