Refactored some class names & variables

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <main id="top-of-page">
     <div id="about-me-section" class="personal-info-top">
-        <section class="personal-info-left">
+        <section class="personal-info-top-left">
             <a class="profile-link" target="_blank" href="https://be.linkedin.com/in/lorenzo-latinne-914b28192"><img class="profile-picture" src="assets/images/profile-picture.jpeg" alt="profile-picture"></a>
             <img class="doodle-star" src="assets/images/doodle-star.png" alt="">
             <div class="social-media">
