--- a/index.html
+++ b/index.html
@@ -103,6 +103,14 @@
                 <tbody>
                 <tr>
                     <td>
+                        Programming Language:
+                    </td>
+                    <td>
+                        <b>C#</b> (average)<br> <b>C</b> (average)<br> <b>JavaScript</b> (average)<br> <b>HTML</b> (good)<br> <b>CSS</b> (good)
+                    </td>
+                </tr>
+                <tr>
+                    <td>
                         Digital Marketing:
                     </td>
                     <td>
@@ -208,9 +216,46 @@
                 </tr>
                 </tbody>
             </table>
-            <div class="mobile-skills">
-                <div class="mobile-hard-skills">
-
+            <div class="mobile-skills-div">
+                <div class="mobile-skills">
+                    <h3>Hard Skills</h3>
+                    <p class="mobile-hard-skills-title">Programming Languages:</p>
+                    <p class="mobile-hard-skills-description">C# (average)</p>
+                    <p class="mobile-hard-skills-description">C (average)</p>
+                    <p class="mobile-hard-skills-description">JavaScript (average)</p>
+                    <p class="mobile-hard-skills-description">HTML (good)</p>
+                    <p class="mobile-hard-skills-description">CSS (good)</p>
+                    <p class="mobile-hard-skills-title">Digital Marketing:</p>
+                    <p class="mobile-hard-skills-description">Setting up advertising campaigns on Google Ads and Meta. Designing promotional materials. Sending newsletters and managing social media.</p>
+                    <p class="mobile-hard-skills-title">Bookkeeping:</p>
+                    <p class="mobile-hard-skills-description">Managing accounting processes with Exact Online. Handling incoming and outgoing invoices.</p>
+                    <p class="mobile-hard-skills-title">Customer Relationship Management:</p>
+                    <p class="mobile-hard-skills-description">Welcoming clients during site visits. Managing customer databases using Microsoft Excel. Prospecting clients using various resources.</p>
+                    <p class="mobile-hard-skills-title">Administrative Skills:</p>
+                    <p class="mobile-hard-skills-description">Document organization (offers, confirmations, invoices). Developing a quote calculator to streamline the sales process.</p>
+                    <p class="mobile-hard-skills-title">Web Development:</p>
+                    <p class="mobile-hard-skills-description">Designing and maintaining websites using WordPress.</p>
+                    <p class="mobile-hard-skills-title">Process Innovation:</p>
+                    <p class="mobile-hard-skills-description">Expanding business activities. Developing a B2C concept for a traditionally B2B company.</p>
+                    <p class="mobile-hard-skills-title">Software Proficiency:</p>
+                    <p class="mobile-hard-skills-description">Microsoft Office Suite (Word, Excel)</p>
+                    <p class="mobile-hard-skills-title">Languages:</p>
+                    <p class="mobile-hard-skills-description">Dutch (Native), English (Excellent), French (Good), German (Basic)</p>
+                </div>
+                <div class="mobile-skills">
+                    <h3>Soft Skills</h3>
+                    <p class="mobile-soft-skills-title">Management and Leadership:</p>
+                    <p class="mobile-soft-skills-description">Supervising work by students and flex workers. Providing instructions and oversight.</p>
+                    <p class="mobile-soft-skills-title">Creativity:</p>
+                    <p class="mobile-soft-skills-description">Designing marketing materials and innovating business concepts.</p>
+                    <p class="mobile-soft-skills-title">Critical Thinking and Problem-Solving:</p>
+                    <p class="mobile-soft-skills-description">Enhancing processes such as sales workflows and concept development.</p>
+                    <p class="mobile-soft-skills-title">Negotiation:</p>
+                    <p class="mobile-soft-skills-description">Effectively prospecting and managing client relationships.</p>
+                    <p class="mobile-soft-skills-title">Independence and Initiative:</p>
+                    <p class="mobile-soft-skills-description">Taking charge of diverse responsibilities and driving projects forward.</p>
+                    <p class="mobile-soft-skills-title">Assertiveness:</p>
+                    <p class="mobile-soft-skills-description">Proactively addressing challenges and communicating confidently.</p>
                 </div>
             </div>
         </div>
@@ -481,7 +526,7 @@
 <footer>
     <div class="footer-content">
         <div class="footer-left">
-            <p><span class="caligraphy">Lorenzo Latinne</span> - 1PROa</p>
+            <p><span class="calligraphy">Lorenzo Latinne</span> - 1PROa</p>
         </div>
         <div class="footer-middle">
             <p>Opdracht curriculum vitae</p>
