Added scroll padding so menu links work correctly.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a href="#experience-section">EXPERIENCE</a>
                 </li>
                 <li>
-                    <a href="">PORTFOLIO</a>
+                    <a href="portfolio.html">PORTFOLIO</a>
                 </li>
             </ul>
         </div>
