--- a/portfolio.html
+++ b/portfolio.html
@@ -134,7 +134,7 @@
                 <td>Week 6</td>
                 <td>POP learning to analyze projects<br>
                     GIT merge<br>
-                    Explanation web project sprint 1<br>
+                    Explanation web project sprint 1
                 </td>
                 <td class="deadline-task">
                     PE6 (career compass)
@@ -161,7 +161,7 @@
             </tr>
             <tr>
                 <td>Week 9</td>
-                <td>PE7 C# project sprint 1<br>
+                <td><span class="pe-test">PE7 C# project sprint 1</span><br>
                     Explanation C# project sprint 2
                 </td>
                 <td class="deadline-task">
@@ -171,16 +171,15 @@
             <tr>
                 <td>Week 10</td>
                 <td>Explanation web project sprint 2<br>
-                    PE8 C# debugging<br>
-                    Submit C# project sprint 2
+                    <span class="pe-test">PE8 C# debugging</span>
                 </td>
                 <td class="deadline-task">
-
+                    Submit C# project sprint 2
                 </td>
             </tr>
             <tr>
                 <td>Week 11</td>
-                <td>PE9 C# project sprint 2<br>
+                <td><span class="pe-test">PE9 C# project sprint 2</span><br>
                     Explanation C# project sprint 3
                 </td>
                 <td class="deadline-task">
