--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="portfolio.css">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <title>Lorenzo Latinne - Portfolio</title>
 </head>
 <body>
@@ -15,16 +16,16 @@
         <div class="nav-middle">
             <ul>
                 <li>
-                    <a href="index.html#top-of-page">ABOUT ME</a>
+                    <a href="indexEN.html#top-of-page">ABOUT ME</a>
                 </li>
                 <li>
-                    <a href="index.html#skills-section">SKILLS</a>
+                    <a href="indexEN.html#skills-section">SKILLS</a>
                 </li>
                 <li>
-                    <a href="index.html#education-section">EDUCATION</a>
+                    <a href="indexEN.html#education-section">EDUCATION</a>
                 </li>
                 <li>
-                    <a href="index.html#experience-section">EXPERIENCE</a>
+                    <a href="indexEN.html#experience-section">EXPERIENCE</a>
                 </li>
                 <li>
                     <a href="portfolio.html">PORTFOLIO</a>
@@ -32,7 +33,7 @@
             </ul>
         </div>
         <div class="nav-right">
-            <a href="index.html#contact-section" class="contact-button">
+            <a href="indexEN.html#contact-section" class="contact-button">
                 <p>CONTACT</p>
             </a>
         </div>
