Added NL index & links to change language.

--- a/indexEN.html
+++ b/indexEN.html
@@ -13,7 +13,10 @@
 <header>
     <nav class="nav-bar">
         <div class="nav-left">
-            <a href="#top-of-page">Lorenzo</a>
+            <a href="indexNL.html">
+                <p class="lang-link-p">NL</p>
+            </a>
+            <a href="#top-of-page">Lorenzo</a><br>
         </div>
         <div class="nav-middle">
             <ul>
