--- a/indexNL.html
+++ b/indexNL.html
@@ -13,6 +13,9 @@
 <header>
     <nav class="nav-bar">
         <div class="nav-left">
+            <a href="indexEN.html" class="lang-link-a">
+                <p class="lang-link-p">EN</p>
+            </a>
             <a href="#top-of-page">Lorenzo</a>
         </div>
         <div class="nav-middle">
